--- a/styles.css
+++ b/styles.css
@@ -2899,12 +2899,12 @@ pre code {
 }
 
 /* Special positioning for tag 5 tooltip - position at top */
-.annotation-tag.tooltip-top .annotation-tooltip-popup {
+/* .annotation-tag.tooltip-top .annotation-tooltip-popup {
   top: calc(-100% - 24px);
   left: 30%;
   transform: translateX(-50%);
-}
-
+} */
+/* 
 .annotation-tag.tooltip-top .annotation-tooltip-popup::before {
   bottom: auto;
   left: 70%;
@@ -2913,16 +2913,16 @@ pre code {
   border: 8px solid transparent;
   border-top-color: #ffffff;
   filter: drop-shadow(0px 2px 2px rgba(9, 30, 66, 0.1));
-}
+} */
 
 /* Special positioning for tooltip - position at bottom */
-.annotation-tag.tooltip-bottom .annotation-tooltip-popup {
+/* .annotation-tag.tooltip-bottom .annotation-tooltip-popup {
   top: calc(100% + 24px);
   left: 30%;
   transform: translateX(-50%);
-}
+} */
 
-.annotation-tag.tooltip-bottom .annotation-tooltip-popup::before {
+/* .annotation-tag.tooltip-bottom .annotation-tooltip-popup::before {
   top: auto;
   left: 70%;
   bottom: 100%;
@@ -2930,7 +2930,7 @@ pre code {
   border: 8px solid transparent;
   border-bottom-color: #ffffff;
   filter: drop-shadow(0px -2px 2px rgba(9, 30, 66, 0.1));
-}
+} */
 
 .annotation-tooltip-popup .tooltip-content {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
